clang/test/BSC/Negative/NullabilityCheck/union_check/union_check.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

void case1() {
  union UInt {
    int x;
  };
  union UPtr {
    int *_Nonnull p;
  };
  int x = 1;
  int *p = &x;

  union UInt u1 = {};
  union UInt u2 = {x};
  union UPtr u3 = {};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  union UPtr u4 = {p};
}

void case2() {
  union UIn {
    int *_Nonnull p;
  };
  union UOut {
    union UIn u;
  };
  int x = 1;
  int *p = &x;

  union UOut u1 = {};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  union UOut u2 = {{}};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  union UOut u3 = {{p}};
}

void case3() {
  union UIn {
    int *_Nonnull p;
  };
  struct SOut {
    union UIn u;
  };
  int x = 1;
  int *p = &x;

  struct SOut s1 = {};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  struct SOut s2 = {{}};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  struct SOut s3 = {{p}};
}

void case4() {
  struct SIn {
    int *_Nonnull p;
  };
  union UOut {
    struct SIn s;
  };
  int x = 1;
  int *p = &x;

  union UOut u1 = {};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  union UOut u2 = {{}};  // expected-error{{type contains nonnull pointer must be properly initialized}}
  union UOut u3 = {{p}};
}